--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://phase-4-app.herokuapp.com",
+  "proxy": "http://localhost:3000",
   "name": "client",
   "version": "0.1.0",
   "private": true,
